--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ code {
   border: 2px solid white;
   border-radius: 50%;
   margin: 5px;
+  cursor: pointer;
 }
 
 .flag-icons button:hover {
@@ -147,4 +148,153 @@ code {
 .stars {
   font-size: 2em;
   margin: 20px 0;
+}
+
+.driver-card {
+  width: 500px;
+  background-color: #425cbb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin: 20px auto;
+}
+
+.driver-card img {
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+  margin: 20px;
+}
+
+.driver-details {
+  color: white;
+  text-align: left;
+  margin: 20px;
+}
+
+.driver-details h2,
+div,
+p {
+  margin: 0;
+}
+
+#like-button {
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+
+#maxence-image {
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+}
+
+#dice-image {
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+}
+
+.images-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.images-carousel button {
+  padding: 10px 20px;
+  margin: 20px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+
+.number-limit {
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.number-limit label,
+input {
+  margin: 5px;
+}
+
+.number-limit input {
+  color: grey;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding: 5px;
+  width: 50px;
+}
+
+.squares-flex {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+  flex-wrap: wrap;
+}
+
+.number-square {
+  width: 50px;
+  height: 50px;
+  margin: 1px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+}
+
+.number-square p {
+  margin: revert;
+}
+
+.number-square.even {
+  background-color: red;
+  color: white;
+}
+
+.data-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.contact-card {
+  width: 400px;
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  border: 1px solid lightgray;
+}
+
+.contact-card img {
+  margin: 20px;
+}
+
+.contact-details {
+  width: 260px;
+  margin: 20px;
+  text-align: left;
+}
+
+.country-buttons {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.country-buttons button {
+  padding: 10px 20px;
+  margin: 20px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.2em;
+  cursor: pointer;
 }
